--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.2",
     "vite": "^7.1.5"
   }
 }
